@@ -25,9 +25,11 @@
 * Always show album directory in tagger output.
 * "import -l" now logs duplicate albums.
 * A new "import_progress" option can be used to disable the importer's
-  resuming feature.
+  resuming feature. Also, the -p and -P flags can force the importer to
+  resume or not resume, skipping the prompt.
 * Resuming is automatically disabled when the importer is in quiet (-q)
-  mode. Progress is still saved, however.
+  mode. Progress is still saved, however, and the -q flag (above) can
+  be used to force resuming.
 * Fix a bug where some files would be erroneously interpreted as MP4.
 * Fix permission bits applied to album art files.
 * Fix malformed MusicBrainz queries caused by null characters.
